Fix mac build when web audio is enabled https://bugs.webkit.org/show_bug.cgi?id=66150

Unreviewed build fix.

* platform/audio/mac/AudioFileReaderMac.cpp:
(WebCore::AudioFileReader::createBus):


Canonical link: https://commits.webkit.org/82004@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92979 268f45cc-cd09-0410-ab3c-d52691b4dbfc